refactor: replace Map<String, Object> with typed resource properties
Replace the generic Map<String, Object> approach for resource properties with
a type-safe model using interfaces and records.  This addresses code review
feedback about leveraging the type system instead of runtime type checking.